--- a/app/views/tiny_urls/index.html.erb
+++ b/app/views/tiny_urls/index.html.erb
@@ -77,6 +77,7 @@
                         <%=
                           link_to url.original_url,
                                   url.original_url,
+                                  target: "_blank"
                                   class: 'text-indigo-600 hover:text-indigo-900'
                         %>
                       </td>
@@ -86,6 +87,7 @@
                         <%=
                           link_to request.original_url + url.new_url,
                                   request.original_url + url.new_url,
+                                  target: "_blank"
                                   class: 'text-indigo-600 hover:text-indigo-900'
                         %>
                       </td>
